# objectBot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
objectBot/: CMakeLists.txt
objectBot/src/: main.cpp
